dropshot/tests/fail/bad_endpoint19.stderr
error[E0277]: the trait bound `std::string::String: SharedExtractor` is not satisfied
  --> tests/fail/bad_endpoint19.rs:26:14
   |
26 |     _param1: String,
   |              ^^^^^^ the trait `SharedExtractor` is not implemented for `std::string::String`
   |
help: the following other types implement trait `SharedExtractor`
   |
  ::: src/extractor/path.rs
   |
   | / impl<PathType> SharedExtractor for Path<PathType>
   | | where
   | |     PathType: DeserializeOwned + JsonSchema + Send + Sync + 'static,
   | |____________________________________________________________________^ `dropshot::Path<PathType>`
  --> src/extractor/query.rs
   |
   | / impl<QueryType> SharedExtractor for Query<QueryType>
   | | where
   | |     QueryType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |_____________________________________________________________________^ `dropshot::Query<QueryType>`
   |
  ::: src/extractor/header.rs
   |
   | / impl<HeaderType> SharedExtractor for Header<HeaderType>
   | | where
   | |     HeaderType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |______________________________________________________________________^ `dropshot::Header<HeaderType>`
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_endpoint19.rs:20:1
   |
20 | / #[endpoint {
21 | |     method = GET,
22 | |     path = "/test",
23 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
26 |       _param1: String,
   |                ------ required by a bound in this function
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<non_extractor_as_last_argument> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::non_extractor_as_last_argument}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint19.rs:24:10
   |
20 | / #[endpoint {
21 | |     method = GET,
22 | |     path = "/test",
23 | | }]
   | |__- required by a bound introduced by this call
24 |   async fn non_extractor_as_last_argument(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, std::string::String, dropshot::Query<QueryParams>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<non_extractor_as_last_argument> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::non_extractor_as_last_argument}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
